--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build
         run: cargo build --verbose --all-features
+      - name: Build (no features)
+        run: cargo build --verbose --no-default-features
       - name: Run tests
         run: cargo test --verbose --all-features
 
